--- a/package.json
+++ b/package.json
@@ -17,22 +17,25 @@
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.9.0",
     "axios": "^0.20.0",
-    "gatsby": "^2.24.49",
+    "deck.gl": "^8.2.8",
+    "gatsby": "^2.24.57",
     "gatsby-background-image": "^1.1.2",
-    "gatsby-image": "^2.4.16",
+    "gatsby-image": "^2.4.17",
     "gatsby-plugin-sass": "^2.3.12",
-    "gatsby-plugin-sharp": "^2.6.28",
-    "gatsby-source-filesystem": "^2.3.25",
+    "gatsby-plugin-sharp": "^2.6.35",
+    "gatsby-source-filesystem": "^2.3.29",
     "gatsby-source-strapi": "0.0.12",
-    "gatsby-transformer-sharp": "^2.5.13",
+    "gatsby-transformer-sharp": "^2.5.14",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-map-gl": "^5.2.8",
+    "react-map-gl-geocoder": "^2.1.2",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "prettier": "2.1.0",
