--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@loadable/component": "^5.13.1",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.9.0",
     "axios": "^0.20.0",
     "deck.gl": "^8.2.8",
+    "electron": "^10.1.1",
     "gatsby": "^2.24.57",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.17",
