--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby": "^2.24.57",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.17",
+    "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.6.35",
     "gatsby-source-filesystem": "^2.3.29",
@@ -31,6 +32,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
     "react-map-gl": "^5.2.8",
     "react-map-gl-geocoder": "^2.1.2",
